# schnapsen

./: .gitignore  LICENSE  README.md  running_schnapsen.ipynb  setup.cfg  setup.py
.github/workflows/: docs.yaml  master.yaml  publish-to-pypi.yml  pull_request.yaml
doc/executables/: cli.html  index.html  server.html
doc/schnapsen/: deck.html  game.html  index.html  twenty_four_card_schnapsen.html
doc/schnapsen/alternative_engines/: ace_one_engine.html  index.html  negative_ace_engine.html  twenty_four_card_schnapsen.html
doc/schnapsen/bots/: alphabeta.html  example_bot.html  index.html  ml_bot.html  rand.html  rdeep.html
doc/schnapsen/bots/gui/: guibot.html  index.html
doc/src/: index.html
doc/src/schnapsen/: deck.html  game.html  index.html  twenty_four_card_schnapsen.html
doc/src/schnapsen/bots/: alphabeta.html  index.html  ml_bot.html  rand.html  rdeep.html
doc/src/schnapsen/bots/gui/: guibot.html  index.html
executables/: bot_creation.py  cli.py  main.py  server.py
src/schnapsen/: __init__.py  bot_manager.py  cli.py  deck.py  fizzbuzz.py  game.py  twenty_four_card_schnapsen.py
src/schnapsen/alternative_engines/: __init.py  ace_one_engine.py  negative_ace_engine.py
src/schnapsen/api/: __init__.py  _start.py
src/schnapsen/bots/: IS_project_bot.py  MLBaseBot.py  MLDataBot.py  MLPlayingBot.py  ML_Bot.py  RandBot.py  __init__.py  aggresive.py  alphabeta.py  bully_bot.py  cheater.py  example_bot.py  minimax.py  minimax_debugging.py  ml_bot.py  passive.py  rand.py  rdeep.py  rdeep_cheater.py  two_stage_bot.py
src/schnapsen/bots/gui/: __init__.py  guibot.py  oldserver.py
src/schnapsen/bots/gui/static/css/: game.css
src/schnapsen/bots/gui/static/js/: deck.js  index_interactive.js
src/schnapsen/bots/gui/template/: gamechooser.html  index_interactive.html
src/schnapsen/user_bots/: rand_bot.py
test/: fizzbuzz_test.py
tests/: fizzbuzz_test.py  test_bots.py  test_deck.py  test_empty_case.py  test_game.py  test_repr.py  test_schnapsen_implementation.py
tests/bots/: test_minimax_alphabeta_bot.py  test_minimax_bot.py  test_randbot.py  test_rdeepbot.py
