##########################
# Setup.py Configuration #
##########################
[metadata]
name = schnapsen

[options]
install_requires =
    torch
    class_resolver>=0.0.10  # for resolving classes; >=0.0.10 for as_string for click options
    click==8.0.1  # for CLI

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    unittest-templates
dev =
    ipykernel

[options.entry_points]
console_scripts =
    schnapsen = schnapsen.cli:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501

import-order-style = pycharm

application-import-names =
    schnapsen

exclude =


########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]

[mypy-mphrqe.data.generated.*]
ignore_errors = True

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-dill]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    # name: description
