##########################
# Setup.py Configuration #
##########################
[metadata]
name = schnapsen
version = 0.0.4
description = A platform for coding and running card playing bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/intelligent-systems-course/
maintainer = Michael Cochez
maintainer_email = nospam@nospam.com
project_urls =
    Bug Tracker = https://github.com/intelligent-systems-course/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Topic :: Games/Entertainment

[options]
install_requires =
    class_resolver>=0.0.10  # for resolving classes; >=0.0.10 for as_string for click options
    click==8.1.3  # for CLI

    scikit-learn==1.3.2 # for ml bot
    joblib==1.3.2 # for storing the model of the ml bot

    flask==2.3.3 # for GUI
    Werkzeug==3.0.1 # Werkzeug is needed for flask. Fixing the version because higher versions cause an error

# Where is my code
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    unittest-templates
dev =
    ipykernel

doc = 
    pdoc

[options.entry_points]
console_scripts =
    schnapsen = schnapsen.cli:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501

import-order-style = pycharm

application-import-names =
    schnapsen

exclude =


########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]

[mypy-schnapsen.deck]
warn_return_any = False

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-dill]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-joblib]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    # name: description
